// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateHeader component should match snapshot when timezone is UserTimezone automatic 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 28,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
  <View
    style={
      Object {
        "marginHorizontal": 15,
      }
    }
  >
    <RecentDate
      date={1531152392}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {},
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      style={
        Object {
          "color": "#3d3c40",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      timezone={
        Object {
          "automaticTimezone": "America/New_York",
          "manualTimezone": "America/Santiago",
          "useAutomaticTimezone": true,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
</View>
`;

exports[`DateHeader component should match snapshot when timezone is UserTimezone manual 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 28,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
  <View
    style={
      Object {
        "marginHorizontal": 15,
      }
    }
  >
    <RecentDate
      date={1531152392}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {},
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      style={
        Object {
          "color": "#3d3c40",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      timezone={
        Object {
          "automaticTimezone": "America/New_York",
          "manualTimezone": "America/Santiago",
          "useAutomaticTimezone": false,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
</View>
`;

exports[`DateHeader component should match snapshot when timezone is set 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 28,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
  <View
    style={
      Object {
        "marginHorizontal": 15,
      }
    }
  >
    <RecentDate
      date={1531152392}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {},
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      style={
        Object {
          "color": "#3d3c40",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      timezone="America/New_York"
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
</View>
`;

exports[`DateHeader component should match snapshot with suffix 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 28,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
  <View
    style={
      Object {
        "marginHorizontal": 15,
      }
    }
  >
    <RecentDate
      date={1531152392}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {},
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      style={
        Object {
          "color": "#3d3c40",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      timezone={null}
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
</View>
`;

exports[`DateHeader component should match snapshot without suffix 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 28,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
  <View
    style={
      Object {
        "marginHorizontal": 15,
      }
    }
  >
    <RecentDate
      date={1531152392}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {},
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      style={
        Object {
          "color": "#3d3c40",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      timezone={null}
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
</View>
`;
